# Openclassrooms_P9

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  coverage.ini  docker-compose.yml  init_db.sh  pyproject.toml  pytest.ini
CLI/: build_index.py  eval_rag.py  qa_helper.py
app/: main.py
app/api/: dependencies.py  schemas.py
app/api/routes/: ask.py  rebuild.py
app/core/: config.py  security.py
app/data/: fetcher.py  mapping.yaml  processor.py
app/etl/: fetcher.py  mapping.yaml  processor.py
app/rag/: base_rag.py  prompt_management.txt  rag_pipeline.py  test_rag_pipeline.py
app/utils/: save_load_datas.py
data/faiss_index/: index.faiss  index.pkl
datas/raw/: qa_pairs.json
faiss_index_test/: index.faiss  index.pkl
tests/: conftest.py
tests/CLI/: test_build_index.py  test_eval_rag.py  test_qa_helper.py
tests/app/: test_main.py
tests/app/api/: test_api_E2E.py  test_dependencies.py  test_schemas.py
tests/app/api/routes/: test_ask.py  test_rebuild.py
tests/app/etl/: test_fetcher.py  test_processor.py
tests/app/rag/: test_rag.py
